--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
 					<span class="menuTrigger" id="hamburger-one">
 							<span class="mainLine"></span>
-					</span>
+						</span>
 				</button>
 				<a class="navbar-brand" href="index.html">
 					<img alt="logo" src="images/logo.png" />
@@ -102,10 +102,10 @@
 						</a>
 					</li>
 					<li>
-						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
-							<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
-						</a>
-					</li>
+            <a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+              <img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
+            </a>
+          </li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
@@ -115,75 +115,184 @@
 </head>
 
 <body>
-	<section>
-		<div class="text-center">
-			</br>
-			<!-- BREAK -->
-			<h1 class="headers"><b>3rd Annual Jig's Up Blugold Ice Fishing Contest</b></h1>
-			<h5 class="headers">Presented by Blugold Recreation, UWEC Athletics, and the Lake Wissota Lions Club</h5>
-			<img alt="Sponsors Logo" src="images/3logo.png" </img>
-			<div class="horizbar"></div>
-			<br />
-			<br />
-			<br />
-		</div>
-		<div class="container">
-			<div class="text-center">
-			<h2 class="headers">  Thank you anglers for coming out. Blugold Recreation, UWEC Athletics, and the Lake Wissota Lions Club appreciate your support.</h2>
-			<h2 class="headers"><u>Save the date: February 11th, 2017.</u></h2>
-		</div>
-	</div>
-	</section>
-	<div class="sponsorBarResults">
-		<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarImg" src="images\sponsors\Subway.png" alt="Subway"></a>
-		<a href="http://www.gordyscountymarket.net" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
-		<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\scheelsLarge.png" alt="Scheels"></a>
-		<a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
-		<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
-		<a href="http://www.stumpshotolives.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\stumps.png" alt="Stump's Spicy Hot Food and Beverages"></a>
-		<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation"></a>
-		<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
-			<a href="http://www.pepsi.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\pepsi.png" alt="Pepsi"></a>
-			<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\ford.png" alt="Ford"></a>
-			<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\edge.png" alt="Ford"></a>
-			<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images\sponsors\view.png" alt="Ford"></a>
-			<a href="http://www.gollonbait.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gollon.png" alt="Gollon Brothers"></a>
-	</div>
-	<br />
-	<!-- BREAK -->
-	<br />
-	<!-- BREAK -->
+  <section id="Slider">
+    <div id="carousel" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carousel-example" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example" data-slide-to="1"></li>
+        <li data-target="#carousel-example" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="item active">
+          <a href="#">
+            <img alt="Image Slider 1" src="images/slider/slide2.jpg" />
+          </a>
+        </div>
+        <div class="item">
+          <a href="#">
+            <img alt="Image Slider 2" src="images/slider/slide1.jpg" />
+          </a>
+        </div>
+        <div class="item">
+          <a href="#">
+            <img alt="Image Slider 3" src="images/slider/slide3.jpg" />
+          </a>
+        </div>
+      </div>
+      <!-- #carousel-inner  -->
+      <a class="left carousel-control" href="#carousel-example" data-slide="prev">
+      </a>
+      <a class="right carousel-control" href="#carousel-example" data-slide="next">
+      </a>
+    </div>
+    <!-- #carousel  -->
+    <div class="text-center">
+      </br>
+      <!-- BREAK -->
+      <h1 class="headers"><b>4th Annual Jig's Up Blugold Ice Fishing Contest</b></h1>
+      <h5 class="headers">Presented by Blugold Recreation, UWEC Athletics, and the Lake Wissota Lions Club</h5>
+      <img alt="Sponsors Logo" src="images/3logo.png" </img>
+      <div class="horizbar">
+      </div>
+      <br />
+      <!-- BREAK -->
+      <br />
+      <!-- BREAK -->
+      </br>
+    </div>
+  </section>
+  <section id="content">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+					<p><h3 class="headers"><b>CHECK BACK MONDAY FOR FULL RESULTS</b></h3></p>
 
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
-	<script src="js/main.js" type="text/javascript"></script>
+          <h3 class="headers"><b>When:</b></h3>
+          <h3>Saturday, February 11th, 2017; 7am-2pm</h3>
+          <br />
+          <!-- BREAK -->
+          <br />
+          <!-- BREAK -->
+          <blockquote>
+						Tickets will be available for pick-up at the weigh-in station at Gordy's Market on Lake
+			      Wissota starting at 6:30AM Saturday, February 11th.
+          </blockquote>
+          <h3 class="headers"><b>Where:</b></h3>
+          <h3> Lake Wissota</h3>
+          <blockquote>
+            <b>Weigh-In Stations:</b> The Edge Pub &amp; The View
+            <br />
+            <!-- BREAK -->
+            <b>Prize Distribution:</b> The View on Lake Wissota, 3pm Raffle Prizes, Fish Prizes to be drawn right after
+          </blockquote>
+
+          <h3 class="headers"><b>New This Year:</b></h3>
+          <h3> <a target="_blank" href="assets\kidsevent.pdf">Scheels Kids Ice Fishing Clinic</a></h3>
+
+          <blockquote>
+            Scheels will host a Kids Klub ice fishing clinic at their store on Friday, February 10th, at 6pm. Space is limited; sign up in advance at Scheels. Learn new skills and try them out on the ice Saturday, February 11th from 12pm-2pm in front of The View in the Kids Klub area.
+            Holes will be drilled and lunch will be provided for the kids;<b> gear is NOT provided</b>. This event is FREE for kids up to age 12, prizes will be awarded for fish caught. Any fish caught in the Kid’s Club area will be marked and will not be eligible to register
+            in the Jig’s Up Blugold Ice Fishing Contest.
+          </blockquote>
+          <p>
+            <i>
+              The Wissota Lions Club will have food and beverages available on the ice. All state regulations and bag limits
+						  apply to this rule and no person may bring in more than the legal limit of fish allowed, which for this contest
+              includes, northern, walleye, panfish (perch, bluegills, crappies), and bass.<a href="http://dnr.wi.gov/topic/fishing/regulations/"> Click here to reference the Wisconsin DNR website. </a>
+            </i>
+          </p>
+          <br />
+          <!-- BREAK -->
+          <br />
+          <!-- BREAK -->
+          <div class="btn-center">
+            <a target="_blank" href="assets/rules.pdf"> <button class="btn1">Click here to see the rules</button></a>
+          </div>
+        </div>
+        <!-- #col-sm-6  -->
+        <div class="col-sm-6">
+          <br />
+          <!-- BREAK -->
+          <div class="videowrapper">
+          	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/xfDY-XQVjqE" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <div class="sponsors">
+            <a href="http://www.gordyscountymarket.net" target="_blank">
+              <img class="indexTitleSponsor" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market">
+            </a>
+            <a href="http://www.scheels.com" target="_blank">
+              <img class="indexTitleSponsor" src="images\sponsors\scheelsLarge.png" alt="Scheels">
+            </a>
+            <a href="http://www.geteskimo.com/" target="_blank">
+              <img class="indexSponsor" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear">
+            </a>
+            <a href="http://www.leinie.com" target="_blank">
+              <img class="indexSponsor" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
+            <a href="http://www.prestigervauto.com/" target="_blank">
+              <img class="indexSponsor" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation">
+            </a>
+            <a href="http://www.uwec.edu/dining/" target="_blank">
+              <img class="indexSponsor" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
+            </a>
+            <a href="http://www.eauclaireford.com/" target="_blank">
+              <img class="indexSponsor" src="images\sponsors\ford.png" alt="Ford">
+            </a>
+            <a href="http://www.theedgepubandeatery.com/" target="_blank">
+              <img class="indexSponsor" src="images\sponsors\edge.png" alt="Ford">
+            </a>
+            <a href="https://www.facebook.com/wissota.view.5" target="_blank">
+              <img class="indexSponsor" src="images\sponsors\view.png" alt="Ford">
+            </a>
+            <a href="http://www.gollonbait.com/" target="_blank">
+              <img class="indexSponsor" src="images\sponsors\gollon.png" alt="Ford">
+            </a>
+          </div>
+        </div>
+        <!-- #col-sm-6  -->
+      </div>
+      <!-- #row  -->
+    </div>
+    <!-- #container  -->
+    <br />
+    <!-- BREAK -->
+    <br />
+    <!-- BREAK -->
+    <br />
+    <!-- BREAK -->
+    <br />
+    <!-- BREAK -->
+  </section>
+
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
+  <script src="js/main.js" type="text/javascript"></script>
 </body>
 
 <footer>
-	<div class="footer hidden-xs">
-		<br />
-		<!-- BREAK -->
-		<p>
-			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-			<br />
-			<!-- BREAK -->
-		</p>
-		<div class="buildn">
-			/build 1.1.0
-		</div>
-	</div>
-	<div class="footer visible-xs">
-		<br />
-		<!-- BREAK -->
-		<p class="small-footer">
-			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-			<br />
-			<!-- BREAK -->
-		</p>
-	</div>
+  <div class="footer hidden-xs">
+    <br />
+    <!-- BREAK -->
+    <p>
+      Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+      <br />
+      <!-- BREAK -->
+    </p>
+    <div class="buildn">
+      /build 1.1.0
+    </div>
+  </div>
+  <div class="footer visible-xs">
+    <br />
+    <!-- BREAK -->
+    <p class="small-footer">
+      Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+      <br />
+      <!-- BREAK -->
+    </p>
+  </div>
 </footer>
 
 </html>
