--- a/schedule.html
+++ b/schedule.html
@@ -61,7 +61,9 @@
 
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<li class="sliding-middle-out"><a href="index.html">Home</a></li>
+					<li class="sliding-middle-out"><a href="contact.html">Contact</a></li>
+					<li class="sliding-middle-out"><a href="sponsors.html">Sponsors</a></li>
+					<li class="sliding-middle-out"><a href="prizes.html">Prizes</a></li>
 					<li class="dropdown">
 						<a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
 						<ul class="dropdown-menu">
@@ -71,13 +73,9 @@
 							<li role="presentation" class="divider"></li>
 							<li><a href="schedule.html">Schedule</a></li>
 							<li role="presentation" class="divider"></li>
-							<li><a href="prizes.html">Prizes</a></li>
-							<li role="presentation" class="divider"></li>
 							<li><a href="lodging.html">Lodging</a></li>
 							<li role="presentation" class="divider"></li>
 							<li><a href="assets/kidsevent.pdf" target="_blank">Scheels Kids Event</a></li>
-							<li role="presentation" class="divider"></li>
-							<li><a href="sponsors.html">Sponsors</a></li>
 							<li role="presentation" class="divider"></li>
 							<li><a href="pastResults.html">Past Results</a></li>
 							<li role="presentation" class="divider"></li>
@@ -85,7 +83,6 @@
 						</ul>
 					</li>
 					<li class="sliding-middle-out"><a href="tickets.html">Tickets</a></li>
-					<li class="sliding-middle-out"><a href="contact.html">Contact</a></li>
 					<li class="social-media">
 						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
 							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
