--- a/index.html
+++ b/index.html
@@ -86,26 +86,6 @@
 					</li>
 					<li class="sliding-middle-out"><a href="tickets.html">Tickets</a></li>
 					<li class="sliding-middle-out"><a href="contact.html">Contact</a></li>
-					<li class="social-media">
-						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
-							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
-						</a>
-					</li>
-					<li>
-						<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
-							<img src="images/twitter.png" class="twitter" </img>
-						</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
-							<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
-						</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
-							<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
-						</a>
-					</li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
@@ -120,7 +100,7 @@
 			</br>
 			<!-- BREAK -->
 			<h1 class="headers"><b>3rd Annual Jig's Up Blugold Ice Fishing Contest</b></h1>
-			<h5 class="headers">Presented by Blugold Recreation, UWEC Athletics, and the Lake Wissota Lions Club</h5>
+			<h5 class="headers">Presented by University Recreation, UWEC Athletics, and the Lake Wissota Lions Club</h5>
 			<img alt="Sponsors Logo" src="images/3logo.png" </img>
 			<div class="horizbar"></div>
 			<br />
