--- a/index.html
+++ b/index.html
@@ -110,36 +110,88 @@
 </head>
 
 <body>
-  <section id="Slider">
-    <div id="carousel" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carousel-example" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example" data-slide-to="1"></li>
-        <li data-target="#carousel-example" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="item active">
-          <a href="#">
-            <img alt="Image Slider 1" src="images/slider/slide2.jpg" />
-          </a>
-        </div>
-        <div class="item">
-          <a href="#">
-            <img alt="Image Slider 2" src="images/slider/slide1.jpg" />
-          </a>
-        </div>
-        <div class="item">
-          <a href="#">
-            <img alt="Image Slider 3" src="images/slider/slide3.jpg" />
-          </a>
-        </div>
-      </div>
-      <!-- #carousel-inner  -->
-      <a class="left carousel-control" href="#carousel-example" data-slide="prev">
-      </a>
-      <a class="right carousel-control" href="#carousel-example" data-slide="next">
-      </a>
-    </div>
+	<div class="container">
+   <div class="row">
+       <div class="col-md-12">
+           <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+               <ol class="carousel-indicators">
+                   <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                   <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                   <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+               </ol>
+               <div class="carousel-inner">
+                   <div class="item active">
+                       <img src="images/slider/slide3.png" alt="First slide">
+                       <div class="carousel-caption">
+<!--
+ <h3>
+                               First slide</h3>
+                           <p>
+                               Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+-->
+                       </div>
+                   </div>
+                   <div class="item">
+                       <img src="images/slider/slide2.png" alt="Second slide">
+                       <div class="carousel-caption">
+<!--
+ <h3>
+                               Second slide</h3>
+                           <p>
+                               Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+-->
+                       </div>
+                   </div>
+                   <div class="item">
+                       <img src="images/slider/slide1.png" alt="Third slide">
+                       <div class="carousel-caption">
+<!--
+<h3>
+                               Third slide</h3>
+                           <p>
+                               Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+-->
+                       </div>
+                   </div>
+               </div>
+               <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                   <span class="glyphicon glyphicon-chevron-left"></span></a><a class="right carousel-control"
+                       href="#carousel-example-generic" data-slide="next"><span class="glyphicon glyphicon-chevron-right">
+                       </span></a>
+           </div>
+           <div class="main-text hidden-xs">
+               <div class="col-md-12 text-center">
+<!--
+<h1>
+                       Title Sponsors</h1>
+<div class="col-sm-6 text-center">
+-->
+<!--
+<div class="sponsors">
+           <a href="http://www.gordyscountymarket.net" target="_blank">
+             <img class="indexTitleSponsor" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market">
+
+ </a>
+           <a href="http://www.scheels.com" target="_blank">
+             <img class="indexTitleSponsor" src="images\sponsors\scheelsLarge.png" alt="Scheels">
+           </a>
+        <a href="http://www.subway.com/subwayroot/default.aspx" target="_blank">
+<img class="indexTitleSponsor" src="images\sponsors\Subway.png" alt="Subway">
+</a>
+         </div>
+-->
+<!--
+                   <div class="">
+                       <a class="btn btn-clear btn-sm btn-min-block" href="https://www.eventbrite.com/e/jigs-up-blugold-ice-fishing-contest-on-lake-wissota-tickets-28840941031">Registration</a></div>
+-->
+ </div>
+</div>
+       </div>
+   </div>
+</div>
+<div id="push">
+</div>
+
     <!-- #carousel  -->
     <div class="text-center">
       </br>
