--- a/index.html
+++ b/index.html
@@ -124,16 +124,19 @@
                    <div class="item active">
                        <img src="images/slider/slide3.png" alt="First slide">
                        <div class="carousel-caption">
+												 <h3 class="headers"> Like us on Facebook </h3>
                        </div>
                    </div>
                    <div class="item">
                        <img src="images/slider/slide2.png" alt="Second slide">
                        <div class="carousel-caption">
+												  
                        </div>
                    </div>
                    <div class="item">
                        <img src="images/slider/slide1.png" alt="Third slide">
                        <div class="carousel-caption">
+												  <h3 class="headers"> Like us on Facebook </h3>
                        </div>
                    </div>
                </div>
